force-app/main/default/objects/Quote_Adjustment__c/Quote_Adjustment__c.object-meta.xml
<CustomObject>
    <label>Change Orders</label>
    <nameField>
        <displayFormat>CO-{0000}</displayFormat>
        <label>Change Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>