force-app/main/default/objects/Quote_Adjustment__c/fields/Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Type__c</fullName>
    <label>Amendment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>