force-app/main/default/objects/Quote_Adjustment__c/fields/Change_Details__c.field-meta.xml
<CustomField>
    <fullName>Change_Details__c</fullName>
    <label>Change Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>