force-app/main/default/objects/Quote_Adjustment__c/fields/Change_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Type__c</fullName>
    <label>Change Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product – Product Availability</fullName>
            </value>
            <value>
                <fullName>Customer – Scope of Work Change</fullName>
            </value>
            <value>
                <fullName>Admin – Admin Error</fullName>
            </value>
            <value>
                <fullName>Sales – Charge Below Margin</fullName>
            </value>
            <value>
                <fullName>Sales – Selling Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>