force-app/main/default/objects/Quote_Adjustment__c/fields/No_charge_approved_by__c.field-meta.xml
<CustomField>
    <fullName>No_charge_approved_by__c</fullName>
    <label>No Charge Approved By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product – Product Availability</fullName>
            </value>
            <value>
                <fullName>Customer – Scope of Work Change</fullName>
            </value>
            <value>
                <fullName>Admin – Admin Error</fullName>
            </value>
            <value>
                <fullName>Sales – Charge Below Margin</fullName>
            </value>
            <value>
                <fullName>Sales – Selling Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>