force-app/main/default/objects/Quote_Adjustment__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Construction_Project__c</referenceTo>
    <relationshipLabel>Change Orders</relationshipLabel>
    <relationshipName>Quote_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>